Service Manager: Fix embedder subprocess init

Service Manager's main() previously assumed that any embedder subprocess
would include a service pipe token on the commandline, and it thus used
this as a signal to perform additional subprocess initialization,
including locale override.

This assumption is incorrect for e.g. the content zygote process.

This CL introduces an explicit embedder API to which the SM delegates
when determining whether or not to perform subprocess initialization.
Content's implementation then indicates that several specific child
process types are subprocesses.

BUG=720222
R=jcivelli@chromium.org

Change-Id: I9d5487a503f942b0c7b41462cc9f00d4fab01ef2
Reviewed-on: https://chromium-review.googlesource.com/562080
Reviewed-by: Jay Civelli <jcivelli@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#484749}
Former-commit-id: 4e92a9428c27532b6d8a8d10a5d554aea795483a