content/app/content_service_manager_main_delegate.cc
@@ -37,6 +37,16 @@ int ContentServiceManagerMainDelegate::Initialize(
   return content_main_runner_->Initialize(content_main_params_);
 }
 
+bool ContentServiceManagerMainDelegate::IsEmbedderSubprocess() {
+  auto type = base::CommandLine::ForCurrentProcess()->GetSwitchValueASCII(
+      switches::kProcessType);
+  return type == switches::kGpuProcess ||
+         type == switches::kPpapiBrokerProcess ||
+         type == switches::kPpapiPluginProcess ||
+         type == switches::kRendererProcess ||
+         type == switches::kUtilityProcess || type == switches::kZygoteProcess;
+}
+
 int ContentServiceManagerMainDelegate::RunEmbedderProcess() {
   return content_main_runner_->Run();
 }
